...
        ) {
            var message by rememberSaveable { mutableStateOf("") }

            MessageTextField(
                modifier = Modifier
                    .weight(1f)
                    .semantics { contentDescription = "message text field" },
                value = message,
                onValueChange = { message = it },
                placeholder = stringResource(id = R.string.message_placeholder)
            )

            Spacer(modifier = Modifier.width(16.dp))

            SendButton(modifier = Modifier.semantics { contentDescription = "send message" }) {
                if (message.isNotBlank()) {
                    onSendMessageClicked(message)
                    message = ""
                }
            }
        }
...
