...
    ) {
        TopAppBar(backgroundColor = MaterialTheme.colors.surface) {
            IconButton(onClick = { onNavigationItemClicked() }) {
                Icon(
                    modifier = Modifier.size(32.dp),
                    imageVector = Icons.Default.KeyboardArrowLeft,
                    contentDescription = "navigation icon",
                    tint = MaterialTheme.colors.primary
                )
            }

            Image(
                modifier = Modifier
...
            Spacer(modifier = Modifier.weight(1f))

            IconButton(onClick = { onMenuClicked() }) {
                Icon(
                    modifier = Modifier.size(32.dp),
                    painter = painterResource(id = R.drawable.ic_more),
                    contentDescription = "menu icon",
                    tint = LightGray
                )
            }
        }
    }
}
...
